css fixes on mobile view,add form warning message

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -12,7 +12,7 @@
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	top: 25%;
+	top: 16%;
 	width: 1000px;
 	height: 562px;
 	color: #fff;
