--- a/src/components/MovieDetails/GoBackToHomePage/GoBackToHomePage.scss
+++ b/src/components/MovieDetails/GoBackToHomePage/GoBackToHomePage.scss
@@ -1,7 +1,7 @@
 .go-homepage-button--svg {
 	position: absolute;
 	top: 40px;
-	left: 50px;
+	left: 33px;
 	height: 50px;
 	width: 50px;
 	background-color: rgba(90, 91, 94, 0.5);
